fixed the visibility issue of the help popup CSS styling needed

--- a/website/static/style.css
+++ b/website/static/style.css
@@ -7,6 +7,7 @@ body{
 #help_overlay{
 
     overflow: scroll;
+    display: none;
 
     position: fixed;
     top: 15%;
